--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "nuxt-icon": "^0.6.9",
     "shadcn-nuxt": "^0.10.0"
   }
 }
