--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "appwrite": "^14.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "lucide-vue-next": "^0.356.0",
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
