--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/image": "^1.4.0",
     "@pinia/nuxt": "^0.5.1",
+    "@tanstack/vue-query": "^5.28.2",
     "@vueuse/core": "^10.9.0",
     "appwrite": "^14.0.0",
     "class-variance-authority": "^0.7.0",
