--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/image": "^1.4.0",
     "@pinia/nuxt": "^0.5.1",
     "@tanstack/vue-query": "^5.28.2",
+    "@vee-validate/nuxt": "^4.12.6",
     "@vueuse/core": "^10.9.0",
     "appwrite": "^14.0.0",
     "class-variance-authority": "^0.7.0",
